--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 body {
   line-height: 1.5;
-  background-image: url(./images/pattern-background-desktop.svg);
+  background-image: url(/images/pattern-background-desktop.svg);
   background-repeat: repeat-x;
   background-color: hsl(225, 100%, 94%);
   color: hsl(224, 23%, 55%);
@@ -42,7 +42,7 @@ h1 {
   font-weight: 900;
   margin-bottom: 0.5em;
 }
-h4 {
+h2 {
   color: hsl(223, 47%, 23%);
   font-weight: 900;
   font-size: 0.9rem;
